// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledButton should render correctly on Android the button with type cancel 1`] = `
<TouchableNativeFeedback>
  <View
    style={
      Array [
        Object {
          "borderRadius": 100,
          "justifyContent": "center",
          "padding": 15,
        },
        Object {
          "backgroundColor": "#141618",
          "borderColor": "#d6d9dc",
          "borderWidth": 1,
        },
        null,
        undefined,
      ]
    }
  />
</TouchableNativeFeedback>
`;

exports[`StyledButton should render correctly on Android the button with type confirm 1`] = `
<TouchableNativeFeedback>
  <View
    style={
      Array [
        Object {
          "borderRadius": 100,
          "justifyContent": "center",
          "padding": 15,
        },
        Object {
          "backgroundColor": "#037dd6",
          "minHeight": 50,
        },
        null,
        undefined,
      ]
    }
  />
</TouchableNativeFeedback>
`;

exports[`StyledButton should render correctly on Android the button with type normal 1`] = `
<TouchableNativeFeedback>
  <View
    style={
      Array [
        Object {
          "borderRadius": 100,
          "justifyContent": "center",
          "padding": 15,
        },
        Object {
          "backgroundColor": "#141618",
          "borderColor": "#037dd6",
          "borderWidth": 1,
        },
        null,
        undefined,
      ]
    }
  />
</TouchableNativeFeedback>
`;

exports[`StyledButton should render correctly on iOS the button with type cancel 1`] = `
<Button
  containerStyle={
    Array [
      Object {
        "borderRadius": 100,
        "justifyContent": "center",
        "padding": 15,
      },
      Object {
        "backgroundColor": "#141618",
        "borderColor": "#d6d9dc",
        "borderWidth": 1,
      },
      undefined,
    ]
  }
  disabledContainerStyle={null}
  style={
    Array [
      Object {
        "fontFamily": "EuclidCircularB-Bold",
        "fontSize": 14,
        "fontWeight": "600",
        "textAlign": "center",
      },
      Object {
        "color": "#d6d9dc",
      },
      undefined,
    ]
  }
  styleDisabled={null}
/>
`;

exports[`StyledButton should render correctly on iOS the button with type confirm 1`] = `
<Button
  containerStyle={
    Array [
      Object {
        "borderRadius": 100,
        "justifyContent": "center",
        "padding": 15,
      },
      Object {
        "backgroundColor": "#037dd6",
        "minHeight": 50,
      },
      undefined,
    ]
  }
  disabledContainerStyle={null}
  style={
    Array [
      Object {
        "fontFamily": "EuclidCircularB-Bold",
        "fontSize": 14,
        "fontWeight": "600",
        "textAlign": "center",
      },
      Object {
        "color": "#ffffff",
      },
      undefined,
    ]
  }
  styleDisabled={null}
/>
`;

exports[`StyledButton should render correctly on iOS the button with type normal 1`] = `
<Button
  containerStyle={
    Array [
      Object {
        "borderRadius": 100,
        "justifyContent": "center",
        "padding": 15,
      },
      Object {
        "backgroundColor": "#141618",
        "borderColor": "#037dd6",
        "borderWidth": 1,
      },
      undefined,
    ]
  }
  disabledContainerStyle={null}
  style={
    Array [
      Object {
        "fontFamily": "EuclidCircularB-Bold",
        "fontSize": 14,
        "fontWeight": "600",
        "textAlign": "center",
      },
      Object {
        "color": "#037dd6",
      },
      undefined,
    ]
  }
  styleDisabled={null}
/>
`;
